--- a/website_blocker/style.css
+++ b/website_blocker/style.css
@@ -1,38 +1,96 @@
 body {
-  font-family: Arial, sans-serif;
-  padding: 10px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f4f7fc;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+  width: 100vw;
+  margin: 0;
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+form {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  width: 400px;
+  max-width: 400px;
+  margin-bottom: 20px;
+}
+
+label {
+  font-size: 16px;
+  margin-bottom: 8px;
+  display: block;
+  color: #333;
 }
 
 input {
-  width: calc(100% - 50px);
-  padding: 5px;
+  width: 97%;
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 6px;
+  margin-bottom: 12px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+input:focus {
+  border-color: #007bff;
 }
 
 button {
-  padding: 5px 10px;
-  margin: 5px 0;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  display: flex;
-  justify-content: space-between;
-  margin: 5px 0;
-}
-
-button {
-  margin-left: 10px;
-  background-color: red;
+  background-color: #007bff;
   color: white;
   border: none;
-  padding: 3px 6px;
+  padding: 10px 20px;
+  border-radius: 6px;
+  font-size: 16px;
   cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+#remove-button {
+  background-color: #dc3545;
+  color: white;
+  border-radius: 6px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  display: none;
+  max-width: 200px;
+  margin-top: 20px;
+  transition: background-color 0.3s;
+}
+
+#remove-button:hover {
+  background-color: #c82333;
+}
+
+#output {
+  font-size: 16px;
+  margin-top: 20px;
+  text-align: center;
+  color: #555;
 }
